--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,9 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.541 0.281 293.009);
 }
-
+html {
+  scrollbar-gutter: stable;
+}
 
 @layer base {
   * {
